Improve teleport-off mining safety